--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
           }
         });
       });
+      $(document).ready(function () {
+        $(".nav-pills ,.nav-link").click(function () {
+          $(".nav,nav-pills").addClass("hidetabs");
+        });
+      });
     </script>
   </body>
 </html>
